src/app/globals.css
/* ... */
@media (max-width: 768px) {
  h3 { font-size: 36px; }
  h2 { font-size: 60px; }
  
  .block_01 .page_content {
    flex-direction: column;
  }
  
  .block_04 .page_content {
    flex-direction: column;
  }
  
  .block_04 .studio_images {
    width: 100%;
    flex-direction: row;
    gap: 15px;
    margin-top: 20px;
  }

  .block_04 .studio_image {
    flex: 1;
    height: 180px;
  }
  
  .block_02 .img {
    display: none;
  }
  
  .inner_content {
    grid-template-columns: 1fr;
  }
  
  .number_header h3 {
    position: absolute;
    left: 130px;
    bottom: 12px;
    margin: 0;
    padding-left: 0;
    font-size: 24px;
    white-space: nowrap;
  }
  
  span.number {
    font-size: 96px;
    white-space: nowrap;
    color: #000000;
    opacity: 0.1;
  }
  
  span.number::after {
    font-size: 36px;
    line-height: 96px;
    color: #000000;
  }
}

@media (max-width: 568px) {
  .block_03 .products {
    grid-template-columns: 1fr;
  }
  
  .block_04 .studio_images {
    flex-direction: column;
  }
}

